tests/errors/2016-1.vb
'#compiler-options:/codepage:1
'#compiler-message:Command line error BC2016 : code page '1' is invalid or not installed
'#exit-code:1